--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -802,7 +802,8 @@ mon.prev=SHIFT TAB        ; prev window
 mon.dump=ALT D            ; toggle dump
 mon.rip=ALT T             ; ripper's tool
 mon.osw=ALT O             ; setup on-screen watches
-mon.scrshot=ALT S         ; toggle screenshot/scrdump/watches
+mon.scrshot=ALT S         ; toggle scrdump/watches
+mon.scrshot_alt=ALT SHIFT S   ; toggle main/alt screen in screendump
 mon.setwatch=CONTROL U    ; set user-defined watch address
 mon.switchay=ALT Y        ; switch active AY (turbo-sound)
 mon.labels=CONTROL J      ; goto label
