Unreal: update ray-paint mode in debugger

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -203,6 +203,9 @@ winscale=1
 
 video=double
 
+; debugger ray painting mode  
+; 0 - overdraw previous frame, 1 - clear to black, 2 - dim previous frame and overdraw it
+raypaint_mode=2
 
 ; driver for video=normal/double/triple/quad/text
 
