Unreal: add ULAplus on border, set default video driver to BLT

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -209,7 +209,7 @@ raypaint_mode=2
 
 ; driver for video=normal/double/triple/quad/text
 
-driver=gdi
+driver=blt
 
 ; video driver:
 ;   ddraw - direct access to video memory, fullscreen only, fastest
