Unreal: add copy screenshot to clipboard, fix x64 build

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -723,6 +723,7 @@ main.pokedialog=F6         ; enter poke(s)
 main.starttape=F7          ; start/stop tape
 main.tapebrowser=SHIFT F7  ; tape browser
 main.screenshot=ALT F8     ; screenshot
+main.shotclipbrd=SHIFT ALT F8      ; screenshot to clipboard
 main.savevideo=CONTROL F8  ; save video
 main.reset=F12             ; reset to [MISC]Reset=DOS/BASIC/MENU/SYS
 main.reset128=CONTROL SHIFT F12 ; reset to basic 128
