--- a/pentevo/avr/current/default/Makefile
+++ b/pentevo/avr/current/default/Makefile
@@ -34,7 +34,7 @@ AD = "$(AP)avrdude$(EXE)" -q -q -u -C "$(AP)avrdude.conf" -c $(PROGRAMMER) -p $(
 CFLAGS = -mmcu=$(MCU)
 CFLAGS += -Os -flto -Wall -Wextra -gdwarf-2 -std=c++11
 CFLAGS += -funsigned-char -funsigned-bitfields -fpack-struct -fshort-enums -fdata-sections -ffunction-sections
-CFLAGS += -Wimplicit-fallthrough=0
+CFLAGS += -Wimplicit-fallthrough=0 -Wno-parentheses -fpermissive
 CFLAGS += -DF_CPU=11059200UL
 CFLAGS += -Wl,--gc-sections,--relax,-Map=$(PROJECT).map
 
