--- a/pentevo/avr/current/default/Makefile
+++ b/pentevo/avr/current/default/Makefile
@@ -46,8 +46,8 @@ HEX_EEPROM_FLAGS += --set-section-flags=.eeprom="alloc,load"
 HEX_EEPROM_FLAGS += --change-section-lma .eeprom=0 --no-change-warnings
 
 ## Objects that must be built in order to link
-SOURCES = ../main.c ../zx.c ../interrupts.c ../ps2.c ../depacker_dirty.c ../rs232.c ../i2c.c ../rtc.c ../oled.cpp ../atx.c ../joystick.c ../version.c ../tape.c ../kbmap.c ../spiflash.c ../rs232_asm.S
-HEADERS = ../zx.h ../ps2.h ../spi.h ../depacker_dirty.h ../rs232.h ../i2c.h ../rtc.h ../oled.h ../atx.h ../joystick.h ../version.h ../tape.h ../kbmap.h ../spiflash.h
+SOURCES = ../main.c ../zx.c ../interrupts.c ../ps2.c ../depacker_dirty.c ../rs232.c ../i2c.c ../rtc.c ../oled.cpp ../atx.c ../joystick.c ../version.c ../tape.c ../kbmap.c ../spiflash.c ../config_interface.c ../rs232_asm.S
+HEADERS = ../zx.h ../ps2.h ../spi.h ../depacker_dirty.h ../rs232.h ../i2c.h ../rtc.h ../oled.h ../atx.h ../joystick.h ../version.h ../tape.h ../kbmap.h ../spiflash.h ../config_interface.h
 
 ## Objects explicitly added by the user
 FPGACORE = tsconf.o baseconf.o egg.o
