--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -705,7 +705,8 @@ RAR=rar e -y "%s"
 main.exit=ALT F4           ; why do this?
 main.lockmouse=SHIFT ESC   ; read kempston mouse in windowed mode
 main.monitor=TIL           ; for hackers only
-main.selectfilter=F4       ; select video filter
+main.selectfilter=CONTROL F4 ; select video filter
+main.visuals=F4            ; visuals window
 main.selectdriver=SHIFT F4 ; select video driver for some filters
 main.flictoggle=CONTROL SHIFT F4 ; toggle flic/noflic
 main.fullscreen=ALT ENTER  ; toggle full-screen on/off
