Unreal: add 2X scale for debugger

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -157,6 +157,8 @@ NoFlic=0      ; apply noflic filter
 AltNoFlic=0   ; use interlaced algorithm for video=double
 FlashColor=0  ;
 
+MonScale=1    ; scale debugger window (2 for 2X, 3 for 3X and so on...)
+
 MinRes=480    ; minimal screen y-resolution in fullscreen mode
               ; use 480 or higher to avoid switching mode when entering monitor
               ; use 1024 to force 1280x1024 on LCD instead of 1280x960
