--- a/pentevo/unreal/Unreal/Unreal.rc
+++ b/pentevo/unreal/Unreal/Unreal.rc
@@ -2,9 +2,6 @@
 // Copyright (C) 2006-2011
 // http://www.resedit.net
 
-#define APSTUDIO_HIDDEN_SYMBOLS
-#include <prsht.h>
-#undef APSTUDIO_HIDDEN_SYMBOLS
 #include <windows.h>
 #include <commctrl.h>
 #include <richedit.h>
@@ -26,6 +23,8 @@ IDR_DEBUGMENU MENU
         MENUITEM "Fill block", IDM_MON_FILLBLOCK
         MENUITEM SEPARATOR
         MENUITEM "Ripper's tool", IDM_MON_RIPPER
+        MENUITEM SEPARATOR
+        MENUITEM "Scale 2x", IDM_MON_SCALE2X
     }
     POPUP "Debug"
     {
