--- a/pentevo/fpga/base/sim_top/Makefile
+++ b/pentevo/fpga/base/sim_top/Makefile
@@ -4,7 +4,9 @@ CC=gcc
 MODELLIB=./sndpix.so
 APPL=./viewer
 
-PLI_INCLUDE=/home/lvd/modelsim/10.0b/modeltech/include
+#PLI_INCLUDE=$(HOME)/modelsim/10.0b/modeltech/include
+PLI_INCLUDE=$(HOME)/modelsim/q10.7c/questasim/include
+
 
 SRCLIB=./sndpix.c
 SRCAPP=./viewer.c
@@ -13,11 +15,11 @@ all : $(APPL) $(MODELLIB) Makefile
 #all : $(MODELLIB) Makefile
 
 clean:
-	rm $(APPLICATION)
+	rm $(APPL) $(MODELLIB)
 
 $(MODELLIB) : $(SRCLIB) sndpix.h Makefile
-	gcc -m32 -O2 -g -shared -Bsymbolic -fPIC -I$(PLI_INCLUDE) $(SRCLIB) -o $(MODELLIB)
+	gcc -O2 -g -shared -Bsymbolic -fPIC -I$(PLI_INCLUDE) $(SRCLIB) -o $(MODELLIB)
 
 $(APPL) : $(SRCAPP) Makefile
-	gcc -O2 -g -L/usr/lib -lSDL $(SRCAPP) -o $(APPL)
+	gcc -O2 -g  $(SRCAPP) -o $(APPL) -lSDL
 
